[package]
name = "jpeg-parser2"
version = "0.1.0"
authors = ["sdkawata <sadaakikawata@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
log = {version="0.4.11", features=["std"]}
wasm-bindgen = "0.2.69"
env_logger = "0.8.2"